; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_core.c___check_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_core.c___check_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i64 }

@HCI_UNCONFIGURED = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@HCI_ACL_TX_TIMEOUT = common dso_local global i64 0, align 8
@ACL_LINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hci_dev*, i32)* @__check_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__check_timeout(%struct.hci_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.hci_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.hci_dev* %0, %struct.hci_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %6 = load i32, i32* @HCI_UNCONFIGURED, align 4
  %7 = call i32 @hci_dev_test_flag(%struct.hci_dev* %5, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %26, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %25, label %12

12:                                               ; preds = %9
  %13 = load i32, i32* @jiffies, align 4
  %14 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %15 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @HCI_ACL_TX_TIMEOUT, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i64 @time_after(i32 %13, i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %12
  %22 = load %struct.hci_dev*, %struct.hci_dev** %3, align 8
  %23 = load i32, i32* @ACL_LINK, align 4
  %24 = call i32 @hci_link_tx_to(%struct.hci_dev* %22, i32 %23)
  br label %25

25:                                               ; preds = %21, %12, %9
  br label %26

26:                                               ; preds = %25, %2
  ret void
}

declare dso_local i32 @hci_dev_test_flag(%struct.hci_dev*, i32) #1

declare dso_local i64 @time_after(i32, i64) #1

declare dso_local i32 @hci_link_tx_to(%struct.hci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
